src/style.css
#bg {
background-image: url("/media/pexels-ithalu-dominguez-907485.jpg");
  background-repeat: no-repeat;
  background-size: cover;

}
h1 {
  color: #491d7f;
  font-family: "Merienda", cursive;
  font-size: 40px;
  font-weight: 900;
  line-height: 28.8px;
}

h2 {
  color: #642ab6;
  font-family: "Merienda", cursive;
}
p {
  color: #7779ff;
}

h4 {
  font-style: italic;
}

ul {
  margin-top: 20px;
  padding: 0;
}

li{
  list-style: none;
  margin: 0;
  padding: 0;
  color: #7779ff;
  font-size: 19px;
  font-weight: 500;
  line-height: 30px;

}

#date {
  margin: 20px;
  font-size: 20px;

}
#celsius-link{
  text-decoration: none;
    font-size: 16px;
    color: #642ab6;
}
#fahrenheit-link {
text-decoration: none;
    font-size: 16px;
    color: #642ab6;
}
.weatherIcon {
  font-size: 79px;
  color: orange;
}
#temp {
  font-size: 79px;
  color: #7779ff;
  font-weight: 500;
}
.units{
    text-decoration: none;
    position: relative;
    font-size: 16px;
    top: -40px;
    color: #642ab6;
}

.container {
  display: block;
  margin: 0 auto;
  max-width: 900px;
}

.mainweatherapp {
  padding: 20px;
  border-radius: 10px;
  max-width: 900px;
  background: rgba(255, 255, 255, 0.5);
  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
  backdrop-filter: blur(9px);
  border: 1px solid rgba(255, 255, 255, 0.18);
  margin: 30px auto;
}


#forecast {
  margin-bottom: 30px;
  text-align: center;
  background: rgba(255, 255, 255, 0.5);
  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
  backdrop-filter: blur(9px);
  border-radius: 30px;
  border: 1px solid rgba(255, 255, 255, 0.18);
  max-width: 110px;
  display: block;
}
.weather-forecast-date {
  font-size: 16px;
  opacity: 0.5;
}

.weather-forecast-temperature-min {
  opacity: 0.5;
}

.weather-forecast-temperatures {
  font-size: 13px;
}

